changed and consolidated html and css in order to utilize semantic html elements.

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,3 +1,4 @@
+/*affects every element on the page*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,41 +8,42 @@
 body {
   background-color: #d9dcd6;
 }
-/* needs to be changed to fit html semantic change */
-.header {
+/*changed to fit html semantic change */
+/*addresses both the logo in the top left of the page and the navbar on the top right*/
+header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: #2a607c;
   color: #ffffff;
 }
-
-.header h1 {
+/*addresses the logo in the top left of the page*/
+header h1 {
   display: inline-block;
   font-size: 48px;
 }
-
-.header h1 .seo {
+/*addresses the grey part of logo in the top left of the page*/
+header h1 .seo {
   color: #d9dcd6;
 }
-
-.header div {
+/*addresses the container holding links in the header*/
+header nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
-
-.header div ul {
+/*addresses the links in the header*/
+header nav ul {
   list-style-type: none;
 }
-
-.header div ul li {
+/*addresses the individual links in the header*/
+header nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
-/*links at the top right of the page*/
+/*addresses all links*/
 a {
   color: #ffffff;
   text-decoration: none;
@@ -50,8 +52,8 @@ a {
 p {
   font-size: 16px;
 }
-/*this is the main image at the top of the webpage*/
-.hero {
+/*addresses the main image at the top of the webpage*/
+figure {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
@@ -59,7 +61,7 @@ p {
   background-size: cover;
   background-position: center;
 }
-/*affects the image placement in the main content*/
+/*affects the image placements in the main content*/
 .float-left {
   float: left;
   margin-right: 25px;
@@ -70,14 +72,15 @@ p {
   margin-left: 25px;
 }
 /*affects the main content at the bottom middle of the page*/
-.content {
+main {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
-/*Consolidate all .benefits into one?*/
-.benefits {
+/*changed to affect html change to semantic aside*/
+/*addresses the content on the lower right side of the page*/
+aside {
   margin-right: 20px;
   padding: 20px;
   clear: both;
@@ -87,57 +90,31 @@ p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
 }
-
-.benefit-lead {
+/*Consolidated .benefits into one*/
+/*addresses the content on the lower right side of the page*/
+.benefit-content {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-lead h3 {
+/*Consolidated .benefits into one*/
+/*addresses the header text on the lower right side of the page*/
+.benefit-content h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
+/*Consolidated .benefits into one*/
+/*addresses the image content on the lower right side of the page*/
+.benefit-content img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-/*consolidate all selectors into one?*/
-.search-engine-optimization {
+/*consolidated all selectors into one*/
+/*addresses the main content in the lower center of the page*/
+.main-content {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -145,60 +122,28 @@ p {
   background-color: #0072bb;
   color: #ffffff;
 }
-
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-/*consolidate*/
-.search-engine-optimization img {
+/*consolidated all selectors into one*/
+/*addresses the main content images in the lower center of the page*/
+.main-content img {
   max-height: 200px;
 }
-
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+/*consolidated all selectors into one*/
+/*addresses the main content headers in the lower center of the page*/
+.main-content h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
 
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-/*will need to be changed to affect html change to semantic footer*/
-.footer {
+/*changed to affect html change to semantic footer*/
+/*addresses the footer at the bottom of the page*/
+footer {
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
 }
-
-.footer h2 {
+/*addresses the header text on the footer at the bottom of the page*/
+footer h2 {
   font-size: 20px;
 }
